@@ -20,7 +20,8 @@
     ],
 
     "background": {
-        "scripts": ["background/try_xpath_background.js"]
+        "scripts": ["scripts/try_xpath_functions.js",
+                    "background/try_xpath_background.js"]
     },
 
     "browser_action": {
